--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -181,19 +181,19 @@
   <div id="scanlines-overlay"></div>
   
   <audio id="creditSound" preload="auto">
-	<source src=".\RES\credit.mp3" type="audio/mpeg">
+	<source src="RES/credit.mp3" type="audio/mpeg">
   </audio>
   <audio id="bgMusic" loop preload="auto">
-	<source src=".\RES\loginska.mp3" type="audio/mpeg">
+	<source src="RES/loginska.mp3" type="audio/mpeg">
   </audio>
   <audio id="gameOverSound" preload="auto">
-	<source src=".\RES\gameover.mp3" type="audio/mpeg">
+	<source src="RES/gameover.mp3" type="audio/mpeg">
   </audio>
   <audio id="rowSound" preload="auto">
-	<source src=".\RES\row.mp3" type="audio/mpeg">
+	<source src="RES/row.mp3" type="audio/mpeg">
   </audio>
   <audio id="dropSound" preload="auto">
-	<source src=".\RES\drop.mp3" type="audio/mpeg">
+	<source src="RES/drop.mp3" type="audio/mpeg">
   </audio>
   
   <h1>Tetris Next</h1>
@@ -1571,3 +1571,4 @@
   </script>
 </body>
 </html>
+
