--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -74,10 +74,10 @@
 	
 	@media(max-width:700px) {
 		button {
-			min-height: 70px;
+			height: 50px;
 		}
 		.val, key {
-			line-height: 70px;
+			line-height: 50px;
 		}
 		
 		#tetris {
@@ -1571,5 +1571,6 @@
   </script>
 </body>
 </html>
+
 
 
