--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -73,10 +73,10 @@
 	}
 	
 	@media(max-width:700px) {
-		button {
+		h1, button {
 			height: 25px;
 		}
-		.val, key {
+		h1, .val, key {
 			line-height: 25px;
 		}
 		
@@ -1571,6 +1571,7 @@
   </script>
 </body>
 </html>
+
 
 
 
