--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <title>Tetris Next</title>
   <style>
     body {
@@ -1578,6 +1579,7 @@
   </script>
 </body>
 </html>
+
 
 
 
