--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <title>Tetris Next</title>
+  <title>Tetris Next - Wood Edition</title>
   <style>
     body {
       background: #111;
@@ -866,4 +866,5 @@
 	}
   </script>
 </body>
+
 </html>
