--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -76,6 +76,8 @@
 	@media(max-width:700px) {
 		h1, button {
 			height: 25px;
+			overflow: hidden;
+        	white-space: nowrap;
 		}
 		h1, .val, key {
 			line-height: 25px;
@@ -869,4 +871,5 @@
 </body>
 
 </html>
+
 
