--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon_wood.ico"/>
   <title>Tetris Next - Wood Edition</title>
   <style>
     body {
@@ -871,5 +871,6 @@
 </body>
 
 </html>
+
 
 
