--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -241,6 +241,8 @@
 	function toggleControls(){
 		currentControlsVisibility = !currentControlsVisibility;
 		document.querySelectorAll('.controls .small').forEach(function(x){x.style.display = currentControlsVisibility ? 'block':'none';});
+		if(!currentControlsVisibility) document.documentElement.requestFullscreen();
+		else document.documentElement.exitFullscreen();
 	}
   
 	const canvas = document.getElementById('tetris');
