--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -237,6 +237,8 @@
 	function toggleControls(){
 		currentControlsVisibility = !currentControlsVisibility;
 		document.querySelectorAll('.controls .small').forEach(function(x){x.style.display = currentControlsVisibility ? 'block':'none';});
+		if(!currentControlsVisibility) document.documentElement.requestFullscreen();
+		else document.documentElement.exitFullscreen();
 	}
   
   
@@ -871,6 +873,7 @@
 </body>
 
 </html>
+
 
 
 
