--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -242,7 +242,7 @@
 		currentControlsVisibility = !currentControlsVisibility;
 		document.querySelectorAll('.controls .small').forEach(function(x){x.style.display = currentControlsVisibility ? 'block':'none';});
 		if(!currentControlsVisibility) document.documentElement.requestFullscreen();
-		else document.documentElement.exitFullscreen();
+		else document.exitFullscreen();
 	}
   
 	const canvas = document.getElementById('tetris');
@@ -1595,3 +1595,4 @@
   </script>
 </body>
 </html>
+
