--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -245,7 +245,7 @@
 		//3 = full screen, controls hidden
 		let controlsVisible = currentControlsVisibility % 2 == 0;
 		let fullScreen = currentControlsVisibility > 1;
-		document.querySelectorAll('.controls .small').forEach(function(x){x.style.display = controlsVisible ? 'block':'none';});
+		document.querySelectorAll('.controls .small').forEach(function(x){x.style.display = controlsVisible ? 'flex':'none';});
 		if(fullScreen) document.documentElement.requestFullscreen();
 		else if(document.fullscreenElement) document.exitFullscreen();
 	}
@@ -881,3 +881,4 @@
   </script>
 </body>
 </html>
+
