--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -186,7 +186,7 @@
   <div id="scanlines-overlay"></div>
   
   <audio id="creditSound" preload="auto">
-	<source src="./res/wood_block_3.mp3" xxxsrc="./res/credit.mp3" type="audio/mpeg">
+	<source src="./res/wood_block_3.mp3" type="audio/mpeg">
   </audio>
   <audio id="bgMusic" loop preload="auto">
 	<source src="./res/loginska.mp3" type="audio/mpeg">
@@ -881,3 +881,4 @@
   </script>
 </body>
 </html>
+
