--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -189,7 +189,7 @@
 	<source src="./res/wood_block_3.mp3" type="audio/mpeg">
   </audio>
   <audio id="bgMusic" loop preload="auto">
-	<source src="./res/loginska.mp3" type="audio/mpeg">
+	<source src="./res/wood_loginska.mp3" type="audio/mpeg">
   </audio>
   <audio id="gameOverSound" preload="auto">
 	<source src="./res/wood_block_3.mp3" type="audio/mpeg">
@@ -881,4 +881,3 @@
   </script>
 </body>
 </html>
-
