--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -719,7 +719,7 @@
 				statsCtx.font = (0.6 * blockSize)+"px Arial Bold";
 				statsCtx.textAlign = "left";
 				statsCtx.textBaseline = "middle";
-				statsCtx.fillText(" → " + statistiche[key] + " BLOCKS", 2 * blockSize, idx * blockSize + 0.6 * blockSize);
+				statsCtx.fillText(" " + key + " → " + statistiche[key] + " BLOCKS", 2 * blockSize, idx * blockSize + 0.6 * blockSize);
 				idx+=2;
 			}
 		}
