--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -1450,7 +1450,7 @@
 	const colorMap = { I:1, J:2, L:3, O:4, S:5, T:6, Z:7 };
 	
 	function resetStats() {
-		statistiche = {'T':0,'J':0,'L':0,'O':0,'S':0,'Z':0,'I':0, 'TOT':0, 'PTS':0, 'HIGH':0};
+		statistiche = {'T':0,'J':0,'L':0,'O':0,'S':0,'Z':0,'I':0, 'TOT':0, 'PTS':0, 'HIGH':statistiche['HIGH']};
 	}
 	
 	function drawStatsBG() {
@@ -1718,3 +1718,4 @@
   </script>
 </body>
 </html>
+
