--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -683,7 +683,7 @@
 	const colorMap = { I:1, J:2, L:3, O:4, S:5, T:6, Z:7 };
 	
 	function resetStats() {
-		statistiche = {'T':0,'J':0,'L':0,'O':0,'S':0,'Z':0,'I':0, 'TOT':0, 'PTS':0, 'HIGH':statistiche['HIGH']};
+		statistiche = {'T':0,'J':0,'L':0,'O':0,'S':0,'Z':0,'I':0, 'TOT':0, 'PTS':0, 'HIGH':0};
 	}
 	
 	function drawStatsBG() {
@@ -861,13 +861,14 @@
 	function gameOver() {
 		gameover = true;
 		stopMusic();
-		playGameOver();
-        disableButtons(true);
+		disableButtons(true);
 		//HIGHSCORE
 		if(isNaN(statistiche['HIGH']) || statistiche['PTS']>statistiche['HIGH']) {
 			statistiche['HIGH'] = statistiche['PTS'];
 			setCookie("TetrisNext-HighScore", statistiche['HIGH'], 365)
-			setTimeout(function(){ playHighScore();},2200);
+			playHighScore();
+		} else {
+			playGameOver();
 		}
 	}
 	
@@ -895,11 +896,6 @@
 			arena.forEach(row => row.fill(0));
 				
 			resetStats();
-			drawStatsBG();
-			
-			playerReset();
-			update();
-			startMusic();
 			
 			//HIGHSCORE
 			let highScore = 0;
@@ -912,6 +908,11 @@
 				statistiche['HIGH'] = highScore;
 			}
 			
+			drawStatsBG();
+			
+			playerReset();
+			update();
+			startMusic();
 			}, 500);
 	}
 	
@@ -949,4 +950,3 @@
   </script>
 </body>
 </html>
-
