--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -1718,62 +1718,60 @@
 	//gestione swipe su mobile
 	let startX = 0;
 	let startY = 0;
-	const SWIPE_THRESHOLD_Y = window.innerHeight / 10;
-	const SWIPE_THRESHOLD_X = window.innerWidth / 30;
+	let canDrop = true;
 
-	//eventi touch
+	//setta start x/y con la posizione iniziale del dito
 	canvas.addEventListener("touchstart", e => {
 		if(gameover) return;
 		startX = e.touches[0].clientX; 
 		startY = e.touches[0].clientY;
 	});
 
+	//ruota al click
 	canvas.addEventListener("click", e => {
 		if(gameover) return;
 		playerRotate(1);
 	});
 
-	canvas.addEventListener("touchend", e => {
+	//ridisegna durante spostamento
+	canvas.addEventListener("touchmove", e => {
 		if(gameover) return;
 		const endX = e.changedTouches[0].clientX;
 		const endY = e.changedTouches[0].clientY;
 
-		const deltaX = endX - startX;
-		const deltaY = endY - startY;
-
-		//swipe verticale
-		if(deltaY < -SWIPE_THRESHOLD_Y) {
-			playerRotate(1); // swipe su → ruota
-		} else if(deltaY > SWIPE_THRESHOLD_Y) {
-			playerDropDown(); // swipe giù → drop
+		if((endY-startY)>(window.innerHeight/5) && canDrop) { 
+			playerDropDown();
+			startY=endY;
+			canDrop = false;
 		}
-
-		//swipe orizzontale
-		if(Math.abs(deltaX) > SWIPE_THRESHOLD_X) {
-			handleSwipe(endX - canvas.offsetLeft);
+		else if(Math.abs(startX-endX)>(window.innerWidth/20)) {
+			handleSwipe(endX-canvas.offsetLeft);
 		}
-
-		//aggiorna start per il prossimo gesto
-		startX = endX;
-		startY = endY;
 	});
 
-	//gestione swipe orizzontale
+	//quando lascio -> resetta start x/y
+	canvas.addEventListener("touchend", e => {
+		startX = e.changedTouches[0].clientX;
+		startY = e.changedTouches[0].clientY;
+		canDrop = true;
+	});
+
+	//gestione swipe
 	function handleSwipe(x) {
+		//calcola la colonna quando lascio
 		const colWidth = canvas.width / 12;
 		const targetCol = Math.floor(x / colWidth);
-
-		const oldPlayerPosX = player.pos.x;
+		
+		let oldPlayerPosX = player.pos.x;
+		
 		player.pos.x = targetCol;
-
 		if (collide(arena, player)) {
-			player.pos.x = oldPlayerPosX;//torna indietro se collide
+		  //in caso di collisione rimettilo dove era precedentemente
+		  player.pos.x = oldPlayerPosX;
 		}
-
-		draw();//ridisegna
+		//ridisegna il canvas
+		draw(); 
 	}
   </script>
 </body>
 </html>
-
-
