--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -1015,9 +1015,9 @@
 
 			const cols = 12;
 			const colWidth = canvas.width / cols;
-			let targetCol = Math.floor(0.1 + relativeX / colWidth);//aggiungo un infinitesimo altrimenti difficile target=0
-			targetCol = Math.max(0, Math.min(cols - 1, targetCol));
-
+			const pieceWidth = player.matrix[0].length;
+			let targetCol = Math.floor(relativeX / colWidth);
+			
 			if (targetCol !== lastTargetCol) {
 				const oldX = player.pos.x;
 				player.pos.x = targetCol;
@@ -1086,7 +1086,3 @@
   </script>
 </body>
 </html>
-
-
-
-
