--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -91,8 +91,8 @@
 	}
 	
 	#tetris {
-		width: auto;
 		height: 100%;
+		aspect-ratio: 3 / 5;
 	}
 	
 	#next {
@@ -1854,6 +1854,7 @@
   </script>
 </body>
 </html>
+
 
 
 
