--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -89,8 +89,8 @@
 	}
 	
 	#tetris {
-		width: auto;
 		height: 100%;
+		aspect-ratio: 3 / 5;
 	}
 	
 	#next {
@@ -1085,4 +1085,5 @@
   </script>
 </body>
 </html>
+
 
