--- a/TETRIS-NEXT.html
+++ b/TETRIS-NEXT.html
@@ -108,7 +108,7 @@
 	
 	button {
       background: #444;
-      padding: 24px;
+      padding: 24px 0;
       color: white;
       border-radius: 6px;
       cursor: pointer;
@@ -1854,6 +1854,7 @@
   </script>
 </body>
 </html>
+
 
 
 
