--- a/TETRIS-WOOD.html
+++ b/TETRIS-WOOD.html
@@ -106,7 +106,7 @@
 	
 	button {
       background: #444;
-      padding: 24px;
+      padding: 24px 0;
       color: #fec;
       border-radius: 6px;
       cursor: pointer;
@@ -1085,5 +1085,6 @@
   </script>
 </body>
 </html>
+
 
 
