--- a/TETRIS-PLAY.html
+++ b/TETRIS-PLAY.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon_wood.ico"/>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
   <title>Tetris Next - Play Edition</title>
   <style>
     body {
@@ -1115,4 +1115,5 @@
 	}
   </script>
 </body>
+
 </html>
